# family-bot

./: .env.example  .gitignore  AGENTS.md  README.md  dockerfile  pyproject.toml  requirements.txt
.agents/: README.md  planner.md  release-steward.md  reviewer.md  system-designer.md  test-guardian.md
.codex/: README.md
.codex/commands/: README.md  archive.md  propose.md  start.md
.codex/prompts/: README.md  archive.md  propose.md  start.md
.codex/skills/apply-workflow/: SKILL.md
.codex/skills/code-review-gate/: SKILL.md
.codex/skills/commit-workflow/: SKILL.md
.codex/skills/performance-review/: SKILL.md
.codex/skills/proposal-planning/: SKILL.md
.codex/skills/system-design-review/: SKILL.md
.codex/workflows/: apply-loop.md
app/: main.py
app/bot/: formatting.py  handlers.py  scheduler.py
app/core/: config.py  models.py
app/core/services/: activity_service.py  ai_service.py  chat_service.py  currency_service.py  info_service.py  session_memory_service.py  weather_service.py
app/integrations/ai/: gemini_client.py  openai_client.py
app/integrations/rates/: client.py
app/integrations/weather/: __init__.py  client.py
app/storage/: migrate.py  pg_repo.py  repo.py
cursor_thoughts/: faminy_bot_design.md  init_phase_summary.md
tasks/: initial.md  task-description.md  tech-spec.md
tests/: test_activity_service.py  test_ai_service.py  test_config.py  test_currency_service.py  test_handlers.py  test_info_service.py  test_main.py  test_repositories.py  test_scheduler.py  test_session_memory_service.py  test_weather_service.py
(+32 files in other folders)
