[project]
name = "faminy-bot"
version = "0.1.0"
description = "Family assistant Telegram bot for a single group chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "apscheduler==3.10.4",
    "psycopg[binary,pool]==3.2.1",
    "pydantic==2.8.2",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.0.1",
    "psycopg[binary,pool]==3.2.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
default-groups = []

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
